src/main/kotlin/com/example/sales_crud/error/exception/UnauthorizedException.kt
package com.example.sales_crud.error.exception

class UnauthorizedException(message:String): RuntimeException(message){}